Uploaded image for project: 'Apache Avro'
  1. Apache Avro
  2. AVRO-1700

avro_BufferStreambuf_hh__ header guard warning

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Minor
    • Resolution: Fixed
    • 1.7.7
    • 1.8.1
    • c++
    • None

    Description

      saw below warning while compiling with g++ 4.2.1 on mac os 10.10.3

      /Users/liuyanbo/git/avro/lang/c++/api/buffer/BufferStreambuf.hh:19:9: warning: 'avro_BufferStreambuf_hh__' is used as a header guard here, followed by #define
      of a different macro -Wheader-guard
      #ifndef avro_BufferStreambuf_hh__
      ^~~~~~~~~~~~~~~~~~~~~~~~~
      /Users/liuyanbo/git/avro/lang/c++/api/buffer/BufferStreambuf.hh:20:9: note: 'avro_BufferStreambuf_HH__' is defined here; did you mean
      'avro_BufferStreambuf_hh__'?
      #define avro_BufferStreambuf_HH__
      ^~~~~~~~~~~~~~~~~~~~~~~~~
      avro_BufferStreambuf_hh__
      1 warning generated

      Attachments

        1. AVRO-1700.1.patch
          0.7 kB
          peter liu

        Issue Links

          Activity

            People

              peter_liu peter liu
              peter_liu peter liu
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: