AVRO-1700 avro_BufferStreambuf_hh__ header guard warning